2013-12-17  Martin Rudalics  <rudalics@gmx.at>

	* dired.el (dired-mark-pop-up):
	* register.el (register-preview): Don't bind
	split-height-threshold here since it's now done in
	display-buffer-below-selected.

2013-12-17  oblique  <psyberbits@gmail.com>  (tiny change)

	* term/rxvt.el (rxvt-rgb-convert-to-16bit): Standardize with
	xterm-rgb-convert-to-16bit.
	(rxvt-register-default-colors): Standardize with
	xterm-register-default-colors (Bug#14078).

2013-12-17  Dima Kogan  <dima@secretsauce.net>  (tiny change)

	* simple.el (kill-region): Pass mark first, then point, so that
	kill-append works right (Bug#12819).
	(copy-region-as-kill, kill-ring-save): Likewise.

2013-12-17  Leo Liu  <sdl.web@gmail.com>

	* net/rcirc.el (rcirc-add-face):
	* eshell/em-prompt.el (eshell-emit-prompt):
	* eshell/em-ls.el (eshell-ls-decorated-name): Use font-lock-face.
	(Bug#16167)

2013-12-17  Chong Yidong  <cyd@gnu.org>

	* files.el (break-hardlink-on-save): Doc fix (Bug#13801).
	Suggested by Xue Fuqiao.

2013-12-17  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-smie-rules): Indent ternary if.

2013-12-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* net/shr.el (shr-insert-document): Remove unused var
	`shr-preliminary-table-render'.
	(shr-rescale-image): Remove unused arg `force'.
	(shr-put-image): Update calls accordingly.
	(shr-tag-a): Use `cont' rather than dyn-bound `dom'.

2013-12-17  Dmitry Gutov  <dgutov@yandex.ru>

	* emacs-lisp/smie.el (smie-indent--rule): Extract `smie-indent--rule-1'.
	(smie-indent-close): Call `smie-indent--rule-1' with METHOD
	:close-all, to see which indentation method to use (Bug#16116).
	(smie-rules-function): Document the method :close-all.

2013-12-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-tag-a): Support zero-length <a name="foo"> elements.

	* net/eww.el (eww-display-html): If we can't find the anchor we're
	looking for, then go to point-min.

2013-12-16  Paul Eggert  <eggert@cs.ucla.edu>
